k8s/nginx-ingress/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
